{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 78,
  "lineage": "7d26f659-ffdb-ecf0-bda0-dedd92eb0eef",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fedb2408fd9b28e1",
            "domain": "vpc",
            "id": "eipalloc-0fedb2408fd9b28e1",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-90-0-50.compute-1.amazonaws.com",
            "public_ip": "54.90.0.50",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097ba5b33aad7ead8",
            "domain": "vpc",
            "id": "eipalloc-097ba5b33aad7ead8",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-230-190-133.compute-1.amazonaws.com",
            "public_ip": "34.230.190.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:internet-gateway/igw-0b36aff6515e03c77",
            "id": "igw-0b36aff6515e03c77",
            "owner_id": "510772023853",
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fedb2408fd9b28e1",
            "connectivity_type": "public",
            "id": "nat-0ace782baf61743a1",
            "network_interface_id": "eni-0e14fb7bae25194ec",
            "private_ip": "172.17.2.189",
            "public_ip": "54.90.0.50",
            "subnet_id": "subnet-052ce4d327d75ec3e"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-097ba5b33aad7ead8",
            "connectivity_type": "public",
            "id": "nat-07c289ac1ecf3ea8d",
            "network_interface_id": "eni-0bd77ba17feb9a7ce",
            "private_ip": "172.17.3.64",
            "public_ip": "34.230.190.133",
            "subnet_id": "subnet-0d76ccfb431d902ed"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b36aff6515e03c77",
            "id": "r-rtb-04d2f0599897cbcb81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04d2f0599897cbcb8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:route-table/rtb-08adab32efbfe7199",
            "id": "rtb-08adab32efbfe7199",
            "owner_id": "510772023853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0ace782baf61743a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:route-table/rtb-05f084bee7c880554",
            "id": "rtb-05f084bee7c880554",
            "owner_id": "510772023853",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07c289ac1ecf3ea8d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c21f7392bf735409",
            "route_table_id": "rtb-08adab32efbfe7199",
            "subnet_id": "subnet-00b7d2a762069fbb3"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1c2ba344440a3c",
            "route_table_id": "rtb-05f084bee7c880554",
            "subnet_id": "subnet-0b1237f4b81b88e62"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:security-group/sg-0c35b0b55b9799f0b",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c35b0b55b9799f0b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0a8d2d777ca8a9736"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cb-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "510772023853",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:security-group/sg-0a8d2d777ca8a9736",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8d2d777ca8a9736",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "cb-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "510772023853",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:subnet/subnet-00b7d2a762069fbb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00b7d2a762069fbb3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510772023853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:subnet/subnet-0b1237f4b81b88e62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1237f4b81b88e62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "510772023853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:subnet/subnet-052ce4d327d75ec3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.17.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052ce4d327d75ec3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510772023853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:subnet/subnet-0d76ccfb431d902ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.17.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d76ccfb431d902ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "510772023853",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-013ad8bb60531c170"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:510772023853:vpc/vpc-013ad8bb60531c170",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.17.0.0/16",
            "default_network_acl_id": "acl-0c9429f778a01c832",
            "default_route_table_id": "rtb-04d2f0599897cbcb8",
            "default_security_group_id": "sg-0052b2381a0a8442c",
            "dhcp_options_id": "dopt-0f2577b29560998f6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-013ad8bb60531c170",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04d2f0599897cbcb8",
            "owner_id": "510772023853"
          }
        }
      ]
    }
  ]
}